second commit :fire:

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>The Big Show</title>
+  <link rel="stylesheet" href="public/style.css">
 </head>
 
 <body>
