--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>The Big Show</title>
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="/public/style.css">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="public/bundle.js"></script>
+  <script src="/public/bundle.js"></script>
 </body>
 
 </html>
